# qt6-qml-qr-android

./: .gitignore  CMakeLists.txt  README.md  android-signing.properties.example  build_android.ps1  build_android_release.ps1  create_android_keystore.ps1
.github/workflows/: build.yml
android/package/: AndroidManifest.xml  build.gradle
android/package/res/drawable/: ic_launcher_foreground.xml
android/package/res/values/: ic_launcher_background.xml
qml/: Main.qml
src/: QrGenerator.cpp  QrGenerator.h  QrScanner.cpp  QrScanner.h  main.cpp
